--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.port=8008
+spring.datasource.url=jdbc:mysql://localhost:3306/quiz
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+#Turn Statistics on and log SQL stmts
+ 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+ 
+#If want to see very extensive logging
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.stat=debug
